@@ -1,3 +1,8 @@
+2000-10-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Put in Artaxerxes' body shapes.
+	* Use 'belt' position on paperdoll.
+
 2000-10-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Restart_game() intrinsic implemented.
